# annotation-redis-3.0

./: CMakeLists.txt  README.md
redis-3.0-annotated/src/: dict.c  redis.c  redis.h  ziplist.c  zmalloc.c
运行原理图解源文件/: Redis Object List 列表对象.drawio  Redis Object Set 集合对象.drawio  Redis Object String 字符串对象.drawio  Redis Object ZSet 有序集合对象.drawio  Redis Object hash 哈希对象.drawio  Redis压缩列表.drawio  Redis字典.drawio  Redis跳跃表.drawio
