cmake_minimum_required(VERSION 3.19)
project(annotation_redis_3_0)

set(CMAKE_C_STANDARD 11)

include_directories(redis-3.0-annotated/deps/hiredis)
include_directories(redis-3.0-annotated/deps/hiredis/adapters)
include_directories(redis-3.0-annotated/deps/jemalloc/include)
include_directories(redis-3.0-annotated/deps/jemalloc/include/jemalloc)
include_directories(redis-3.0-annotated/deps/jemalloc/include/jemalloc/internal)
include_directories(redis-3.0-annotated/deps/jemalloc/include/msvc_compat)
include_directories(redis-3.0-annotated/deps/linenoise)
include_directories(redis-3.0-annotated/deps/lua/etc)
include_directories(redis-3.0-annotated/deps/lua/src)
include_directories(redis-3.0-annotated/src)

add_executable(annotation_redis_3_0
        redis-3.0-annotated/deps/hiredis/adapters/ae.h
        redis-3.0-annotated/deps/hiredis/adapters/libev.h
        redis-3.0-annotated/deps/hiredis/adapters/libevent.h
        redis-3.0-annotated/deps/hiredis/async.c
        redis-3.0-annotated/deps/hiredis/async.h
        redis-3.0-annotated/deps/hiredis/dict.c
        redis-3.0-annotated/deps/hiredis/dict.h
        redis-3.0-annotated/deps/hiredis/example-ae.c
        redis-3.0-annotated/deps/hiredis/example-libev.c
        redis-3.0-annotated/deps/hiredis/example-libevent.c
        redis-3.0-annotated/deps/hiredis/example.c
        redis-3.0-annotated/deps/hiredis/fmacros.h
        redis-3.0-annotated/deps/hiredis/hiredis.c
        redis-3.0-annotated/deps/hiredis/hiredis.h
        redis-3.0-annotated/deps/hiredis/net.c
        redis-3.0-annotated/deps/hiredis/net.h
        redis-3.0-annotated/deps/hiredis/sds.c
        redis-3.0-annotated/deps/hiredis/sds.h
        redis-3.0-annotated/deps/hiredis/test.c
        redis-3.0-annotated/deps/hiredis/zmalloc.h
        redis-3.0-annotated/deps/jemalloc/include/jemalloc/internal/arena.h
        redis-3.0-annotated/deps/jemalloc/include/jemalloc/internal/atomic.h
        redis-3.0-annotated/deps/jemalloc/include/jemalloc/internal/base.h
        redis-3.0-annotated/deps/jemalloc/include/jemalloc/internal/bitmap.h
        redis-3.0-annotated/deps/jemalloc/include/jemalloc/internal/chunk.h
        redis-3.0-annotated/deps/jemalloc/include/jemalloc/internal/chunk_dss.h
        redis-3.0-annotated/deps/jemalloc/include/jemalloc/internal/chunk_mmap.h
        redis-3.0-annotated/deps/jemalloc/include/jemalloc/internal/ckh.h
        redis-3.0-annotated/deps/jemalloc/include/jemalloc/internal/ctl.h
        redis-3.0-annotated/deps/jemalloc/include/jemalloc/internal/extent.h
        redis-3.0-annotated/deps/jemalloc/include/jemalloc/internal/hash.h
        redis-3.0-annotated/deps/jemalloc/include/jemalloc/internal/huge.h
        redis-3.0-annotated/deps/jemalloc/include/jemalloc/internal/mb.h
        redis-3.0-annotated/deps/jemalloc/include/jemalloc/internal/mutex.h
        redis-3.0-annotated/deps/jemalloc/include/jemalloc/internal/private_namespace.h
        redis-3.0-annotated/deps/jemalloc/include/jemalloc/internal/prng.h
        redis-3.0-annotated/deps/jemalloc/include/jemalloc/internal/prof.h
        redis-3.0-annotated/deps/jemalloc/include/jemalloc/internal/ql.h
        redis-3.0-annotated/deps/jemalloc/include/jemalloc/internal/qr.h
        redis-3.0-annotated/deps/jemalloc/include/jemalloc/internal/quarantine.h
        redis-3.0-annotated/deps/jemalloc/include/jemalloc/internal/rb.h
        redis-3.0-annotated/deps/jemalloc/include/jemalloc/internal/rtree.h
        redis-3.0-annotated/deps/jemalloc/include/jemalloc/internal/stats.h
        redis-3.0-annotated/deps/jemalloc/include/jemalloc/internal/tcache.h
        redis-3.0-annotated/deps/jemalloc/include/jemalloc/internal/tsd.h
        redis-3.0-annotated/deps/jemalloc/include/jemalloc/internal/util.h
        redis-3.0-annotated/deps/jemalloc/include/msvc_compat/inttypes.h
        redis-3.0-annotated/deps/jemalloc/include/msvc_compat/stdbool.h
        redis-3.0-annotated/deps/jemalloc/include/msvc_compat/stdint.h
        redis-3.0-annotated/deps/jemalloc/include/msvc_compat/strings.h
        redis-3.0-annotated/deps/jemalloc/src/arena.c
        redis-3.0-annotated/deps/jemalloc/src/atomic.c
        redis-3.0-annotated/deps/jemalloc/src/base.c
        redis-3.0-annotated/deps/jemalloc/src/bitmap.c
        redis-3.0-annotated/deps/jemalloc/src/chunk.c
        redis-3.0-annotated/deps/jemalloc/src/chunk_dss.c
        redis-3.0-annotated/deps/jemalloc/src/chunk_mmap.c
        redis-3.0-annotated/deps/jemalloc/src/ckh.c
        redis-3.0-annotated/deps/jemalloc/src/ctl.c
        redis-3.0-annotated/deps/jemalloc/src/extent.c
        redis-3.0-annotated/deps/jemalloc/src/hash.c
        redis-3.0-annotated/deps/jemalloc/src/huge.c
        redis-3.0-annotated/deps/jemalloc/src/jemalloc.c
        redis-3.0-annotated/deps/jemalloc/src/mb.c
        redis-3.0-annotated/deps/jemalloc/src/mutex.c
        redis-3.0-annotated/deps/jemalloc/src/prof.c
        redis-3.0-annotated/deps/jemalloc/src/quarantine.c
        redis-3.0-annotated/deps/jemalloc/src/rtree.c
        redis-3.0-annotated/deps/jemalloc/src/stats.c
        redis-3.0-annotated/deps/jemalloc/src/tcache.c
        redis-3.0-annotated/deps/jemalloc/src/tsd.c
        redis-3.0-annotated/deps/jemalloc/src/util.c
        redis-3.0-annotated/deps/jemalloc/src/zone.c
        redis-3.0-annotated/deps/jemalloc/test/aligned_alloc.c
        redis-3.0-annotated/deps/jemalloc/test/allocated.c
        redis-3.0-annotated/deps/jemalloc/test/allocm.c
        redis-3.0-annotated/deps/jemalloc/test/ALLOCM_ARENA.c
        redis-3.0-annotated/deps/jemalloc/test/bitmap.c
        redis-3.0-annotated/deps/jemalloc/test/mremap.c
        redis-3.0-annotated/deps/jemalloc/test/posix_memalign.c
        redis-3.0-annotated/deps/jemalloc/test/rallocm.c
        redis-3.0-annotated/deps/jemalloc/test/thread_arena.c
        redis-3.0-annotated/deps/jemalloc/test/thread_tcache_enabled.c
        redis-3.0-annotated/deps/linenoise/example.c
        redis-3.0-annotated/deps/linenoise/linenoise.c
        redis-3.0-annotated/deps/linenoise/linenoise.h
        redis-3.0-annotated/deps/lua/etc/all.c
        redis-3.0-annotated/deps/lua/etc/lua.hpp
        redis-3.0-annotated/deps/lua/etc/min.c
        redis-3.0-annotated/deps/lua/etc/noparser.c
        redis-3.0-annotated/deps/lua/src/lapi.c
        redis-3.0-annotated/deps/lua/src/lapi.h
        redis-3.0-annotated/deps/lua/src/lauxlib.c
        redis-3.0-annotated/deps/lua/src/lauxlib.h
        redis-3.0-annotated/deps/lua/src/lbaselib.c
        redis-3.0-annotated/deps/lua/src/lcode.c
        redis-3.0-annotated/deps/lua/src/lcode.h
        redis-3.0-annotated/deps/lua/src/ldblib.c
        redis-3.0-annotated/deps/lua/src/ldebug.c
        redis-3.0-annotated/deps/lua/src/ldebug.h
        redis-3.0-annotated/deps/lua/src/ldo.c
        redis-3.0-annotated/deps/lua/src/ldo.h
        redis-3.0-annotated/deps/lua/src/ldump.c
        redis-3.0-annotated/deps/lua/src/lfunc.c
        redis-3.0-annotated/deps/lua/src/lfunc.h
        redis-3.0-annotated/deps/lua/src/lgc.c
        redis-3.0-annotated/deps/lua/src/lgc.h
        redis-3.0-annotated/deps/lua/src/linit.c
        redis-3.0-annotated/deps/lua/src/liolib.c
        redis-3.0-annotated/deps/lua/src/llex.c
        redis-3.0-annotated/deps/lua/src/llex.h
        redis-3.0-annotated/deps/lua/src/llimits.h
        redis-3.0-annotated/deps/lua/src/lmathlib.c
        redis-3.0-annotated/deps/lua/src/lmem.c
        redis-3.0-annotated/deps/lua/src/lmem.h
        redis-3.0-annotated/deps/lua/src/loadlib.c
        redis-3.0-annotated/deps/lua/src/lobject.c
        redis-3.0-annotated/deps/lua/src/lobject.h
        redis-3.0-annotated/deps/lua/src/lopcodes.c
        redis-3.0-annotated/deps/lua/src/lopcodes.h
        redis-3.0-annotated/deps/lua/src/loslib.c
        redis-3.0-annotated/deps/lua/src/lparser.c
        redis-3.0-annotated/deps/lua/src/lparser.h
        redis-3.0-annotated/deps/lua/src/lstate.c
        redis-3.0-annotated/deps/lua/src/lstate.h
        redis-3.0-annotated/deps/lua/src/lstring.c
        redis-3.0-annotated/deps/lua/src/lstring.h
        redis-3.0-annotated/deps/lua/src/lstrlib.c
        redis-3.0-annotated/deps/lua/src/ltable.c
        redis-3.0-annotated/deps/lua/src/ltable.h
        redis-3.0-annotated/deps/lua/src/ltablib.c
        redis-3.0-annotated/deps/lua/src/ltm.c
        redis-3.0-annotated/deps/lua/src/ltm.h
        redis-3.0-annotated/deps/lua/src/lua.c
        redis-3.0-annotated/deps/lua/src/lua.h
        redis-3.0-annotated/deps/lua/src/lua_cjson.c
        redis-3.0-annotated/deps/lua/src/lua_cmsgpack.c
        redis-3.0-annotated/deps/lua/src/lua_struct.c
        redis-3.0-annotated/deps/lua/src/luac.c
        redis-3.0-annotated/deps/lua/src/luaconf.h
        redis-3.0-annotated/deps/lua/src/lualib.h
        redis-3.0-annotated/deps/lua/src/lundump.c
        redis-3.0-annotated/deps/lua/src/lundump.h
        redis-3.0-annotated/deps/lua/src/lvm.c
        redis-3.0-annotated/deps/lua/src/lvm.h
        redis-3.0-annotated/deps/lua/src/lzio.c
        redis-3.0-annotated/deps/lua/src/lzio.h
        redis-3.0-annotated/deps/lua/src/print.c
        redis-3.0-annotated/deps/lua/src/strbuf.c
        redis-3.0-annotated/deps/lua/src/strbuf.h
        redis-3.0-annotated/src/adlist.c
        redis-3.0-annotated/src/adlist.h
        redis-3.0-annotated/src/ae.c
        redis-3.0-annotated/src/ae.h
        redis-3.0-annotated/src/ae_epoll.c
        redis-3.0-annotated/src/ae_evport.c
        redis-3.0-annotated/src/ae_kqueue.c
        redis-3.0-annotated/src/ae_select.c
        redis-3.0-annotated/src/anet.c
        redis-3.0-annotated/src/anet.h
        redis-3.0-annotated/src/aof.c
        redis-3.0-annotated/src/asciilogo.h
        redis-3.0-annotated/src/bio.c
        redis-3.0-annotated/src/bio.h
        redis-3.0-annotated/src/bitops.c
        redis-3.0-annotated/src/blocked.c
        redis-3.0-annotated/src/cluster.c
        redis-3.0-annotated/src/cluster.h
        redis-3.0-annotated/src/config.c
        redis-3.0-annotated/src/config.h
        redis-3.0-annotated/src/crc16.c
        redis-3.0-annotated/src/crc64.c
        redis-3.0-annotated/src/crc64.h
        redis-3.0-annotated/src/db.c
        redis-3.0-annotated/src/debug.c
        redis-3.0-annotated/src/dict.c
        redis-3.0-annotated/src/dict.h
        redis-3.0-annotated/src/endianconv.c
        redis-3.0-annotated/src/endianconv.h
        redis-3.0-annotated/src/fmacros.h
        redis-3.0-annotated/src/help.h
        redis-3.0-annotated/src/hyperloglog.c
        redis-3.0-annotated/src/intset.c
        redis-3.0-annotated/src/intset.h
        redis-3.0-annotated/src/lzf.h
        redis-3.0-annotated/src/lzf_c.c
        redis-3.0-annotated/src/lzf_d.c
        redis-3.0-annotated/src/lzfP.h
        redis-3.0-annotated/src/memtest.c
        redis-3.0-annotated/src/multi.c
        redis-3.0-annotated/src/networking.c
        redis-3.0-annotated/src/notify.c
        redis-3.0-annotated/src/object.c
        redis-3.0-annotated/src/pqsort.c
        redis-3.0-annotated/src/pqsort.h
        redis-3.0-annotated/src/pubsub.c
        redis-3.0-annotated/src/rand.c
        redis-3.0-annotated/src/rand.h
        redis-3.0-annotated/src/rdb.c
        redis-3.0-annotated/src/rdb.h
        redis-3.0-annotated/src/redis-benchmark.c
        redis-3.0-annotated/src/redis-check-aof.c
        redis-3.0-annotated/src/redis-check-dump.c
        redis-3.0-annotated/src/redis-cli.c
        redis-3.0-annotated/src/redis.c
        redis-3.0-annotated/src/redis.h
        redis-3.0-annotated/src/redisassert.h
        redis-3.0-annotated/src/release.c
        redis-3.0-annotated/src/release.h
        redis-3.0-annotated/src/replication.c
        redis-3.0-annotated/src/rio.c
        redis-3.0-annotated/src/rio.h
        redis-3.0-annotated/src/scripting.c
        redis-3.0-annotated/src/sds.c
        redis-3.0-annotated/src/sds.h
        redis-3.0-annotated/src/sentinel.c
        redis-3.0-annotated/src/setproctitle.c
        redis-3.0-annotated/src/sha1.c
        redis-3.0-annotated/src/sha1.h
        redis-3.0-annotated/src/slowlog.c
        redis-3.0-annotated/src/slowlog.h
        redis-3.0-annotated/src/solarisfixes.h
        redis-3.0-annotated/src/sort.c
        redis-3.0-annotated/src/syncio.c
        redis-3.0-annotated/src/t_hash.c
        redis-3.0-annotated/src/t_list.c
        redis-3.0-annotated/src/t_set.c
        redis-3.0-annotated/src/t_string.c
        redis-3.0-annotated/src/t_zset.c
        redis-3.0-annotated/src/testhelp.h
        redis-3.0-annotated/src/util.c
        redis-3.0-annotated/src/util.h
        redis-3.0-annotated/src/version.h
        redis-3.0-annotated/src/ziplist.c
        redis-3.0-annotated/src/ziplist.h
        redis-3.0-annotated/src/zipmap.c
        redis-3.0-annotated/src/zipmap.h
        redis-3.0-annotated/src/zmalloc.c
        redis-3.0-annotated/src/zmalloc.h)
